// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdsDataGrid Component IdsPagerMixin Tests paginates correctly when data-grid is sorted by column 1`] = `
"<style nonce=\\"undefined\\">:host { background-color: transparent; }</style>
      <div class=\\"ids-data-grid  \\" role=\\"table\\" part=\\"table\\" aria-label=\\"Data Grid\\" data-row-height=\\"lg\\" mode=\\"light\\" version=\\"new\\">
      
      <div class=\\"ids-data-grid-header\\" role=\\"rowgroup\\" part=\\"header\\">
        <div role=\\"row\\" class=\\"ids-data-grid-row\\">
          
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"selectionCheckbox\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          <span class=\\"ids-datagrid-checkbox-container\\">
        <span role=\\"checkbox\\" aria-checked=\\"false\\" aria-label=\\"undefined\\" class=\\"ids-datagrid-checkbox\\">
        </span>
      </span>
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"rowNumber\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          #
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell is-sortable\\" part=\\"header-cell\\" data-column-id=\\"description\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Description
        </span>
        
      <div class=\\"sort-indicator\\">
        <ids-icon icon=\\"dropdown\\"></ids-icon>
        <ids-icon icon=\\"dropdown\\"></ids-icon>
      </div>
    
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"ledger\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Ledger
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"publishDate\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Pub. Date
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"publishTime\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Pub. Time
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"price\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Price
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"bookCurrency\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Currency
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"transactionCurrency\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Transaction Currency
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"integer\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Price (Int)
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"location\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Location
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"postHistory\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Post History
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"active\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Active
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"convention\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Convention
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"methodSwitch\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Method Switch
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"trackDeprecationHistory\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Track Deprecation History
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"useForEmployee\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Use For Employee
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"deprecationHistory\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Deprecation History
        </span>
        
      </span>
    
        </div>
      </div>
    
      
      <div class=\\"ids-data-grid-body\\" part=\\"body\\" role=\\"rowgroup\\">
        
      <div role=\\"row\\" part=\\"row\\" aria-rowindex=\\"1\\" class=\\"ids-data-grid-row   \\">
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"1\\" tabindex=\\"0\\">
            <span class=\\"ids-datagrid-checkbox-container\\"><span role=\\"checkbox\\" aria-checked=\\"false\\" aria-label=\\"undefined\\" class=\\"ids-datagrid-checkbox\\"></span></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell readonly\\" aria-colindex=\\"2\\">
            <span class=\\"text-ellipsis\\">1</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"3\\">
            <span class=\\"text-ellipsis\\">107</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"4\\">
            <span class=\\"text-ellipsis\\">CORE</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"5\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"6\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"7\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"8\\">
            <span class=\\"text-ellipsis\\">USD</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"9\\">
            <span class=\\"text-ellipsis\\">Book</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"10\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"11\\">
            <ids-hyperlink href=\\"#\\" tabindex=\\"-1\\" role=\\"link\\">Canada</ids-hyperlink>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"12\\">
            <span class=\\"text-ellipsis\\">Yes</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"13\\">
            <span class=\\"text-ellipsis\\">Yes</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"14\\">
            <span class=\\"text-ellipsis\\">Full Month</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"15\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"16\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"17\\">
            <span class=\\"text-ellipsis\\">**</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"18\\">
            <span class=\\"text-ellipsis\\">Asset Label</span>
          </span>
        
      </div>
    
      <div role=\\"row\\" part=\\"row\\" aria-rowindex=\\"2\\" class=\\"ids-data-grid-row   \\">
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"1\\">
            <span class=\\"ids-datagrid-checkbox-container\\"><span role=\\"checkbox\\" aria-checked=\\"false\\" aria-label=\\"undefined\\" class=\\"ids-datagrid-checkbox\\"></span></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell readonly\\" aria-colindex=\\"2\\">
            <span class=\\"text-ellipsis\\">2</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"3\\">
            <span class=\\"text-ellipsis\\">108</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"4\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"5\\">
            <span class=\\"text-ellipsis\\">12.12.2020</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"6\\">
            <span class=\\"text-ellipsis\\">13:25</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"7\\">
            <span class=\\"text-ellipsis\\">15.50</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"8\\">
            <span class=\\"text-ellipsis\\">USD</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"9\\">
            <span class=\\"text-ellipsis\\">Book</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"10\\">
            <span class=\\"text-ellipsis\\">16</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"11\\">
            
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"12\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"13\\">
            <span class=\\"text-ellipsis\\">Yes</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"14\\">
            <span class=\\"text-ellipsis\\">Full Month</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"15\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"16\\">
            <span class=\\"text-ellipsis\\">Yes</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"17\\">
            <span class=\\"text-ellipsis\\">***</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"18\\">
            <span class=\\"text-ellipsis\\">Asset Label</span>
          </span>
        
      </div>
    
      <div role=\\"row\\" part=\\"row\\" aria-rowindex=\\"3\\" class=\\"ids-data-grid-row   \\">
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"1\\">
            <span class=\\"ids-datagrid-checkbox-container\\"><span role=\\"checkbox\\" aria-checked=\\"false\\" aria-label=\\"undefined\\" class=\\"ids-datagrid-checkbox\\"></span></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell readonly\\" aria-colindex=\\"2\\">
            <span class=\\"text-ellipsis\\">3</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"3\\">
            <span class=\\"text-ellipsis\\">109</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"4\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"5\\">
            <span class=\\"text-ellipsis\\">12.12.2019</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"6\\">
            <span class=\\"text-ellipsis\\">13:25</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"7\\">
            <span class=\\"text-ellipsis\\">29.48</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"8\\">
            <span class=\\"text-ellipsis\\">USD</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"9\\">
            <span class=\\"text-ellipsis\\">Book</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"10\\">
            <span class=\\"text-ellipsis\\">29</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"11\\">
            <ids-hyperlink href=\\"#\\" tabindex=\\"-1\\" role=\\"link\\">United States</ids-hyperlink>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"12\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"13\\">
            <span class=\\"text-ellipsis\\">Yes</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"14\\">
            <span class=\\"text-ellipsis\\">Full Month</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"15\\">
            <span class=\\"text-ellipsis\\">Yes</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"16\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"17\\">
            <span class=\\"text-ellipsis\\">**</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"18\\">
            <span class=\\"text-ellipsis\\">Asset Label</span>
          </span>
        
      </div>
    
      </div>
    
      </div>
    <ids-pager page-number=\\"3\\" page-size=\\"3\\" total=\\"9\\">
      <ids-pager-button first=\\"\\" page-number=\\"3\\" page-size=\\"3\\" total=\\"9\\"></ids-pager-button>
      <ids-pager-button previous=\\"\\" page-number=\\"3\\" page-size=\\"3\\" total=\\"9\\"></ids-pager-button>
      <ids-pager-input page-number=\\"3\\" page-size=\\"3\\" total=\\"9\\"></ids-pager-input>
      <ids-pager-button next=\\"\\" page-number=\\"3\\" page-size=\\"3\\" total=\\"9\\" nav-disabled=\\"\\"></ids-pager-button>
      <ids-pager-button last=\\"\\" page-number=\\"3\\" page-size=\\"3\\" total=\\"9\\" nav-disabled=\\"\\"></ids-pager-button>
      <div slot=\\"end\\">
        <ids-menu-button id=\\"pager-size-menu-button\\" menu=\\"pager-size-menu\\" role=\\"button\\" dropdown-icon=\\"\\" aria-controls=\\"pager-size-menu\\">
          <span slot=\\"text\\">3 Records per page</span>
        </ids-menu-button>
        <ids-popup-menu id=\\"pager-size-menu\\" target=\\"#pager-size-menu-button\\" trigger=\\"click\\" hidden=\\"\\">
          <ids-menu-group>
            <ids-menu-item value=\\"10\\">10</ids-menu-item>
            <ids-menu-item value=\\"25\\">25</ids-menu-item>
            <ids-menu-item value=\\"50\\">50</ids-menu-item>
            <ids-menu-item value=\\"100\\">100</ids-menu-item>
          </ids-menu-group>
        </ids-popup-menu>
      </div>
    </ids-pager>"
`;

exports[`IdsDataGrid Component IdsPagerMixin Tests renders pager 1`] = `
<ids-data-grid
  page-size="10"
  pagination="client-side"
/>
`;

exports[`IdsDataGrid Component IdsPagerMixin Tests renders pager 2`] = `
"<style nonce=\\"undefined\\">:host { background-color: transparent; }</style>
      <div class=\\"ids-data-grid  \\" role=\\"table\\" part=\\"table\\" aria-label=\\"Data Grid\\" data-row-height=\\"lg\\" mode=\\"light\\" version=\\"new\\">
      
      <div class=\\"ids-data-grid-header\\" role=\\"rowgroup\\" part=\\"header\\">
        <div role=\\"row\\" class=\\"ids-data-grid-row\\">
          
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"selectionCheckbox\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          <span class=\\"ids-datagrid-checkbox-container\\">
        <span role=\\"checkbox\\" aria-checked=\\"false\\" aria-label=\\"undefined\\" class=\\"ids-datagrid-checkbox\\">
        </span>
      </span>
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"rowNumber\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          #
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell is-sortable\\" part=\\"header-cell\\" data-column-id=\\"description\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Description
        </span>
        
      <div class=\\"sort-indicator\\">
        <ids-icon icon=\\"dropdown\\"></ids-icon>
        <ids-icon icon=\\"dropdown\\"></ids-icon>
      </div>
    
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"ledger\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Ledger
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"publishDate\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Pub. Date
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"publishTime\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Pub. Time
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"price\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Price
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"bookCurrency\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Currency
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"transactionCurrency\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Transaction Currency
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"integer\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Price (Int)
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"location\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Location
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"postHistory\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Post History
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"active\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Active
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"convention\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Convention
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"methodSwitch\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Method Switch
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"trackDeprecationHistory\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Track Deprecation History
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"useForEmployee\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Use For Employee
        </span>
        
      </span>
    
      <span class=\\"ids-data-grid-header-cell \\" part=\\"header-cell\\" data-column-id=\\"deprecationHistory\\" role=\\"columnheader\\">
        <span class=\\"ids-data-grid-header-text\\">
          Deprecation History
        </span>
        
      </span>
    
        </div>
      </div>
    
      
      <div class=\\"ids-data-grid-body\\" part=\\"body\\" role=\\"rowgroup\\">
        
      <div role=\\"row\\" part=\\"row\\" aria-rowindex=\\"1\\" class=\\"ids-data-grid-row   \\">
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"1\\" tabindex=\\"0\\">
            <span class=\\"ids-datagrid-checkbox-container\\"><span role=\\"checkbox\\" aria-checked=\\"false\\" aria-label=\\"undefined\\" class=\\"ids-datagrid-checkbox\\"></span></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell readonly\\" aria-colindex=\\"2\\">
            <span class=\\"text-ellipsis\\">1</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"3\\">
            <span class=\\"text-ellipsis\\">101</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"4\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"5\\">
            <span class=\\"text-ellipsis\\">23.4.2021</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"6\\">
            <span class=\\"text-ellipsis\\">14:25</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"7\\">
            <span class=\\"text-ellipsis\\">12.99</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"8\\">
            <span class=\\"text-ellipsis\\">USD</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"9\\">
            <span class=\\"text-ellipsis\\">Book</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"10\\">
            <span class=\\"text-ellipsis\\">13</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"11\\">
            <ids-hyperlink href=\\"#\\" tabindex=\\"-1\\" role=\\"link\\">United States</ids-hyperlink>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"12\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"13\\">
            <span class=\\"text-ellipsis\\">Yes</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"14\\">
            <span class=\\"text-ellipsis\\">Full Month</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"15\\">
            <span class=\\"text-ellipsis\\">Yes</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"16\\">
            <span class=\\"text-ellipsis\\">Yes</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"17\\">
            <span class=\\"text-ellipsis\\">**</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"18\\">
            <span class=\\"text-ellipsis\\">Asset Label</span>
          </span>
        
      </div>
    
      <div role=\\"row\\" part=\\"row\\" aria-rowindex=\\"2\\" class=\\"ids-data-grid-row   \\">
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"1\\">
            <span class=\\"ids-datagrid-checkbox-container\\"><span role=\\"checkbox\\" aria-checked=\\"false\\" aria-label=\\"undefined\\" class=\\"ids-datagrid-checkbox\\"></span></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell readonly\\" aria-colindex=\\"2\\">
            <span class=\\"text-ellipsis\\">2</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"3\\">
            <span class=\\"text-ellipsis\\">102</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"4\\">
            <span class=\\"text-ellipsis\\">CORE</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"5\\">
            <span class=\\"text-ellipsis\\">23.2.2021</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"6\\">
            <span class=\\"text-ellipsis\\">13:25</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"7\\">
            <span class=\\"text-ellipsis\\">13.99</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"8\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"9\\">
            <span class=\\"text-ellipsis\\">Book</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"10\\">
            <span class=\\"text-ellipsis\\">14</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"11\\">
            <ids-hyperlink href=\\"#\\" tabindex=\\"-1\\" role=\\"link\\">Canada</ids-hyperlink>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"12\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"13\\">
            <span class=\\"text-ellipsis\\">Yes</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"14\\">
            <span class=\\"text-ellipsis\\">Full Month</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"15\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"16\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"17\\">
            <span class=\\"text-ellipsis\\">**</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"18\\">
            <span class=\\"text-ellipsis\\">Asset Label</span>
          </span>
        
      </div>
    
      <div role=\\"row\\" part=\\"row\\" aria-rowindex=\\"3\\" class=\\"ids-data-grid-row   \\">
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"1\\">
            <span class=\\"ids-datagrid-checkbox-container\\"><span role=\\"checkbox\\" aria-checked=\\"false\\" aria-label=\\"undefined\\" class=\\"ids-datagrid-checkbox\\"></span></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell readonly\\" aria-colindex=\\"2\\">
            <span class=\\"text-ellipsis\\">3</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"3\\">
            <span class=\\"text-ellipsis\\">103</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"4\\">
            <span class=\\"text-ellipsis\\">CORE</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"5\\">
            <span class=\\"text-ellipsis\\">23.12.2021</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"6\\">
            <span class=\\"text-ellipsis\\">13:25</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"7\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"8\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"9\\">
            <span class=\\"text-ellipsis\\">Book</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"10\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"11\\">
            <ids-hyperlink href=\\"#\\" tabindex=\\"-1\\" role=\\"link\\">United States</ids-hyperlink>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"12\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"13\\">
            <span class=\\"text-ellipsis\\">Yes</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"14\\">
            <span class=\\"text-ellipsis\\">Full Month</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"15\\">
            <span class=\\"text-ellipsis\\">Yes</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"16\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"17\\">
            <span class=\\"text-ellipsis\\">***</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"18\\">
            <span class=\\"text-ellipsis\\">Asset Label</span>
          </span>
        
      </div>
    
      <div role=\\"row\\" part=\\"row\\" aria-rowindex=\\"4\\" class=\\"ids-data-grid-row   \\">
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"1\\">
            <span class=\\"ids-datagrid-checkbox-container\\"><span role=\\"checkbox\\" aria-checked=\\"false\\" aria-label=\\"undefined\\" class=\\"ids-datagrid-checkbox\\"></span></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell readonly\\" aria-colindex=\\"2\\">
            <span class=\\"text-ellipsis\\">4</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"3\\">
            <span class=\\"text-ellipsis\\">104</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"4\\">
            <span class=\\"text-ellipsis\\">CORE</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"5\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"6\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"7\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"8\\">
            <span class=\\"text-ellipsis\\">USD</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"9\\">
            <span class=\\"text-ellipsis\\">Book</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"10\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"11\\">
            <ids-hyperlink href=\\"#\\" tabindex=\\"-1\\" role=\\"link\\">Canada</ids-hyperlink>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"12\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"13\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"14\\">
            <span class=\\"text-ellipsis\\">Full Month</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"15\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"16\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"17\\">
            <span class=\\"text-ellipsis\\">**</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"18\\">
            <span class=\\"text-ellipsis\\">Asset Label</span>
          </span>
        
      </div>
    
      <div role=\\"row\\" part=\\"row\\" aria-rowindex=\\"5\\" class=\\"ids-data-grid-row   \\">
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"1\\">
            <span class=\\"ids-datagrid-checkbox-container\\"><span role=\\"checkbox\\" aria-checked=\\"false\\" aria-label=\\"undefined\\" class=\\"ids-datagrid-checkbox\\"></span></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell readonly\\" aria-colindex=\\"2\\">
            <span class=\\"text-ellipsis\\">5</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"3\\">
            <span class=\\"text-ellipsis\\">105</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"4\\">
            <span class=\\"text-ellipsis\\">CORE</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"5\\">
            <span class=\\"text-ellipsis\\">12.12.2021</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"6\\">
            <span class=\\"text-ellipsis\\">13:25</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"7\\">
            <span class=\\"text-ellipsis\\">15.99</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"8\\">
            <span class=\\"text-ellipsis\\">USD</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"9\\">
            <span class=\\"text-ellipsis\\">Book</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"10\\">
            <span class=\\"text-ellipsis\\">16</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"11\\">
            <ids-hyperlink href=\\"#\\" tabindex=\\"-1\\" role=\\"link\\">United States</ids-hyperlink>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"12\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"13\\">
            <span class=\\"text-ellipsis\\">Yes</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"14\\">
            <span class=\\"text-ellipsis\\">Full Month</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"15\\">
            <span class=\\"text-ellipsis\\">Yes</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"16\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"17\\">
            <span class=\\"text-ellipsis\\">***</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"18\\">
            <span class=\\"text-ellipsis\\">Asset Label</span>
          </span>
        
      </div>
    
      <div role=\\"row\\" part=\\"row\\" aria-rowindex=\\"6\\" class=\\"ids-data-grid-row   \\">
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"1\\">
            <span class=\\"ids-datagrid-checkbox-container\\"><span role=\\"checkbox\\" aria-checked=\\"false\\" aria-label=\\"undefined\\" class=\\"ids-datagrid-checkbox\\"></span></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell readonly\\" aria-colindex=\\"2\\">
            <span class=\\"text-ellipsis\\">6</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"3\\">
            <span class=\\"text-ellipsis\\">106</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"4\\">
            <span class=\\"text-ellipsis\\">CORE</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"5\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"6\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"7\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"8\\">
            <span class=\\"text-ellipsis\\">USD</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"9\\">
            <span class=\\"text-ellipsis\\">Book</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"10\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"11\\">
            
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"12\\">
            <span class=\\"text-ellipsis\\">Yes</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"13\\">
            <span class=\\"text-ellipsis\\">Yes</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"14\\">
            <span class=\\"text-ellipsis\\">Full Month</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"15\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"16\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"17\\">
            <span class=\\"text-ellipsis\\">**</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"18\\">
            <span class=\\"text-ellipsis\\">Asset Label</span>
          </span>
        
      </div>
    
      <div role=\\"row\\" part=\\"row\\" aria-rowindex=\\"7\\" class=\\"ids-data-grid-row   \\">
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"1\\">
            <span class=\\"ids-datagrid-checkbox-container\\"><span role=\\"checkbox\\" aria-checked=\\"false\\" aria-label=\\"undefined\\" class=\\"ids-datagrid-checkbox\\"></span></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell readonly\\" aria-colindex=\\"2\\">
            <span class=\\"text-ellipsis\\">7</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"3\\">
            <span class=\\"text-ellipsis\\">107</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"4\\">
            <span class=\\"text-ellipsis\\">CORE</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"5\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"6\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"7\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"8\\">
            <span class=\\"text-ellipsis\\">USD</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"9\\">
            <span class=\\"text-ellipsis\\">Book</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"10\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"11\\">
            <ids-hyperlink href=\\"#\\" tabindex=\\"-1\\" role=\\"link\\">Canada</ids-hyperlink>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"12\\">
            <span class=\\"text-ellipsis\\">Yes</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"13\\">
            <span class=\\"text-ellipsis\\">Yes</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"14\\">
            <span class=\\"text-ellipsis\\">Full Month</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"15\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"16\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"17\\">
            <span class=\\"text-ellipsis\\">**</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"18\\">
            <span class=\\"text-ellipsis\\">Asset Label</span>
          </span>
        
      </div>
    
      <div role=\\"row\\" part=\\"row\\" aria-rowindex=\\"8\\" class=\\"ids-data-grid-row   \\">
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"1\\">
            <span class=\\"ids-datagrid-checkbox-container\\"><span role=\\"checkbox\\" aria-checked=\\"false\\" aria-label=\\"undefined\\" class=\\"ids-datagrid-checkbox\\"></span></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell readonly\\" aria-colindex=\\"2\\">
            <span class=\\"text-ellipsis\\">8</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"3\\">
            <span class=\\"text-ellipsis\\">108</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"4\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"5\\">
            <span class=\\"text-ellipsis\\">12.12.2020</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"6\\">
            <span class=\\"text-ellipsis\\">13:25</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"7\\">
            <span class=\\"text-ellipsis\\">15.50</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"8\\">
            <span class=\\"text-ellipsis\\">USD</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"9\\">
            <span class=\\"text-ellipsis\\">Book</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"10\\">
            <span class=\\"text-ellipsis\\">16</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"11\\">
            
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"12\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"13\\">
            <span class=\\"text-ellipsis\\">Yes</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"14\\">
            <span class=\\"text-ellipsis\\">Full Month</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"15\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"16\\">
            <span class=\\"text-ellipsis\\">Yes</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"17\\">
            <span class=\\"text-ellipsis\\">***</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"18\\">
            <span class=\\"text-ellipsis\\">Asset Label</span>
          </span>
        
      </div>
    
      <div role=\\"row\\" part=\\"row\\" aria-rowindex=\\"9\\" class=\\"ids-data-grid-row   \\">
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"1\\">
            <span class=\\"ids-datagrid-checkbox-container\\"><span role=\\"checkbox\\" aria-checked=\\"false\\" aria-label=\\"undefined\\" class=\\"ids-datagrid-checkbox\\"></span></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell readonly\\" aria-colindex=\\"2\\">
            <span class=\\"text-ellipsis\\">9</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"3\\">
            <span class=\\"text-ellipsis\\">109</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"4\\">
            <span class=\\"text-ellipsis\\"></span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"5\\">
            <span class=\\"text-ellipsis\\">12.12.2019</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"6\\">
            <span class=\\"text-ellipsis\\">13:25</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"7\\">
            <span class=\\"text-ellipsis\\">29.48</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"8\\">
            <span class=\\"text-ellipsis\\">USD</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"9\\">
            <span class=\\"text-ellipsis\\">Book</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"10\\">
            <span class=\\"text-ellipsis\\">29</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"11\\">
            <ids-hyperlink href=\\"#\\" tabindex=\\"-1\\" role=\\"link\\">United States</ids-hyperlink>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"12\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"13\\">
            <span class=\\"text-ellipsis\\">Yes</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"14\\">
            <span class=\\"text-ellipsis\\">Full Month</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"15\\">
            <span class=\\"text-ellipsis\\">Yes</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"16\\">
            <span class=\\"text-ellipsis\\">No</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"17\\">
            <span class=\\"text-ellipsis\\">**</span>
          </span>
        
          <span role=\\"cell\\" part=\\"cell\\" class=\\"ids-data-grid-cell \\" aria-colindex=\\"18\\">
            <span class=\\"text-ellipsis\\">Asset Label</span>
          </span>
        
      </div>
    
      </div>
    
      </div>
    <ids-pager page-number=\\"1\\" page-size=\\"10\\" total=\\"9\\">
      <ids-pager-button first=\\"\\" page-number=\\"1\\" nav-disabled=\\"\\" page-size=\\"10\\" total=\\"9\\"></ids-pager-button>
      <ids-pager-button previous=\\"\\" page-number=\\"1\\" nav-disabled=\\"\\" page-size=\\"10\\" total=\\"9\\"></ids-pager-button>
      <ids-pager-input page-number=\\"1\\" page-size=\\"10\\" total=\\"9\\"></ids-pager-input>
      <ids-pager-button next=\\"\\" page-number=\\"1\\" nav-disabled=\\"\\" page-size=\\"10\\" total=\\"9\\"></ids-pager-button>
      <ids-pager-button last=\\"\\" page-number=\\"1\\" nav-disabled=\\"\\" page-size=\\"10\\" total=\\"9\\"></ids-pager-button>
      <div slot=\\"end\\">
        <ids-menu-button id=\\"pager-size-menu-button\\" menu=\\"pager-size-menu\\" role=\\"button\\" dropdown-icon=\\"\\" aria-controls=\\"pager-size-menu\\">
          <span slot=\\"text\\">10 Records per page</span>
        </ids-menu-button>
        <ids-popup-menu id=\\"pager-size-menu\\" target=\\"#pager-size-menu-button\\" trigger=\\"click\\" hidden=\\"\\">
          <ids-menu-group>
            <ids-menu-item value=\\"10\\">10</ids-menu-item>
            <ids-menu-item value=\\"25\\">25</ids-menu-item>
            <ids-menu-item value=\\"50\\">50</ids-menu-item>
            <ids-menu-item value=\\"100\\">100</ids-menu-item>
          </ids-menu-group>
        </ids-popup-menu>
      </div>
    </ids-pager>"
`;
